TempFeat: local sage as peerDeps

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "@types/node": "^20.4.4",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "sage": "file:../sage"
   }
 }
